PyMaker/datas/object2/RawHTML/i14701/Python_DOC_referPages.python-file-not-found-error-handeling.txt
<div class="post-text" itemprop="text">
<pre><code>import csv
try:
    with open('test.xlsx',newline='') as csvfile:
        except errno.ENOENT
            print("opps !! no such file")
        dialect = csv.Sniffer().sniff(csvfile.read(1024))
        csvfile.seek(0)
        reader = csv.reader(csvfile, dialect)
        for row in reader:
            print(row)
</code></pre>
<p>the error I get </p>
<pre><code>  File "&lt;ipython-input-59-b3b9b540a1d8&gt;", line 4
    except errno.ENOENT
         ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You need to place the <code>except</code> block at the same level as the <code>try</code> block, and add a colon, and use the right exception:</p>
<pre><code>try:
    with open('test.xlsx',newline='') as csvfile:
        dialect = csv.Sniffer().sniff(csvfile.read(1024))
        csvfile.seek(0)
        reader = csv.reader(csvfile, dialect)
        for row in reader:
            print(row)
except FileNotFoundError:
    print("Oops! No such file")
</code></pre>
<p>If you only wanted to catch the <code>open()</code> call and not include the rest of the <code>with</code> block in the <code>try..except</code> handler, you need to open the file separately, <em>then</em> use it in the <code>with</code> block:</p>
<pre><code>try:
    csvfile = open('test.xlsx',newline='')
except FileNotFoundError:
    print("Oops! No such file")

else:
    with csvfile:
        dialect = csv.Sniffer().sniff(csvfile.read(1024))
        csvfile.seek(0)
        reader = csv.reader(csvfile, dialect)
        for row in reader:
            print(row)
</code></pre>
<p>Note that <code>errno.ENOENT</code> is not a valid exception to catch, it is only a constant. I used the <a href="https://docs.python.org/3/library/exceptions.html#FileNotFoundError" rel="nofollow"><code>FileNotFoundError</code> exception</a> instead; it is a subclass of <code>OSError</code> that is thrown when the file you tried to open was not found.</p>
</div>
<span class="comment-copy">Its works and gives a opps no such file, but continues to go ahead and execute the code. I added  break after print but getting an error</span>
